2002-04-12  Clint Adams  <clint@zsh.org>

        * 16973: Completion/Debian/Command/_apt: complete package name
        argument to apt-cache policy.

        * 16972: Completion/Unix/Type/_hosts: complete for aaaa, zone, mx,
	soa, txt.

2002-04-09  Peter Stephenson  <pws@csr.com>

	* 16942: Src/glob.c:  Allow zero-length matches in parameter
	substitutions.

2002-04-04  Oliver Kiddle  <opk@zsh.org>

	* 16935: Completion/Unix/Command/_ssh: update list of options
	completed and add sftp completion

2002-04-04  Clint Adams  <clint@zsh.org>

        * 16934: Completion/Unix/Command/_ssh: complete -1 as well as -2.

2002-03-27  Oliver Kiddle  <opk@zsh.org>

	* John Beppu: 16866 (tweaked): Completion/Unix/Command/_figlet:
	new completion for figlet

	* 16908: Doc/Zsh/compsys.yo: alter _generic example to be more robust

2002-03-25  Oliver Kiddle  <opk@zsh.org>

	* Clint: 15079: Completion/Unix/Command/_last: completion for last

	* 16804: Completion/Unix/Command/_sccs,
	Completion/Unix/Command/.distfiles: completion for sccs

	* 16864: Completion/Unix/Command/_ssh: fix remote file completion
	with relative paths

2002-03-17  Bart Schaefer  <schaefer@zsh.org>

	* 16820: Test/E01options.ztst: change tests to match 16759.

	* 16556: Src/builtin.c: Error messages added in 16504,16505 should
	not change the behavior of >&- redirections.

	* Felix Rosencrantz: 16546: Completion/Unix/Command/_perl:
	complete the arguments to a perl script with _normal.

2002-03-17  Clint Adams  <clint@zsh.org>

        * 16850: Completion/Unix/Command/_rsync: remote file completion via
	rsync and ssh, plus all options valid in rsync 2.5.2.

        * 16846: Completion/X/Command/_xdvi: complete .dvi.gz and .dvi.bz2
        too.

2002-03-10  Clint Adams  <clint@zsh.org>

        * unposted: Etc/BUGS, Etc/TODO: update relevant
	issues.

2002-03-07  Clint Adams  <clint@zsh.org>

        * 16778: Completion/Unix/Command/.distfiles,
        Completion/Unix/Command/_irssi: completion by Istvan